<resources>
    <string name="app_name">简读</string>
    <!--tab和-->
    <string name="tab_home">首页</string>
    <string name="tab_rank">热门</string>
    <string name="tab_notify">通知</string>
    <string name="tab_usercenter">我的</string>
    <string name="title_home">首页</string>
    <string name="title_search">搜索</string>
    <!--loginActivity-->
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">新用户？注册</string>

    <string name="menu_copy_url">复制链接</string>
    <string name="menu_open_with_browser">用浏览器打开</string>
    <string name="menu_report">报告文章问题</string>

    <string name="share_success">分享成功</string>
    <string name="share_failure">分享失败</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
